--- a/nbs/A.0.0 Creating a main data frame.ipynb
+++ b/nbs/A.0.0 Creating a main data frame.ipynb
@@ -20,29 +20,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 5,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import axelrod\n",
-    "import read_in"
+    "import axelrod as axl"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def strategies_properties():\n",
+    "    \"\"\"\n",
+    "     A function that returns a data frame with the strategies of the Axelrod\n",
+    "     library and for each strategy it's property.\n",
+    "    \"\"\"\n",
+    "    axl_strategies = pd.DataFrame(\n",
+    "        columns=[\n",
+    "            \"Name\",\n",
+    "            \"Stochastic\",\n",
+    "            \"Memory_depth\",\n",
+    "            \"Makes_use_of_game\",\n",
+    "            \"Makes_use_of_length\",\n",
+    "        ]\n",
+    "    )\n",
+    "\n",
+    "    for i, strategy in enumerate(axl.strategies):\n",
+    "        use_of_game = False\n",
+    "        use_of_length = False\n",
+    "\n",
+    "        if \"game\" in strategy().classifier[\"makes_use_of\"]:\n",
+    "            use_of_game = True\n",
+    "        if \"length\" in strategy().classifier[\"makes_use_of\"]:\n",
+    "            use_of_length = True\n",
+    "        axl_strategies.loc[i] = [\n",
+    "            strategy().name,\n",
+    "            strategy().classifier[\"stochastic\"],\n",
+    "            strategy().classifier[\"memory_depth\"],\n",
+    "            use_of_game,\n",
+    "            use_of_length,\n",
+    "        ]\n",
+    "    return axl_strategies"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'3.0.0'"
+       "'4.5.0'"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -53,24 +89,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 8,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "directory = \"../data/\""
+    "directory = \"../data/raw_data/\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
@@ -95,233 +142,162 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>0</td>\n",
-       "      <td>Cooperator</td>\n",
-       "      <td>3.507081</td>\n",
-       "      <td>0.032711</td>\n",
-       "      <td>172.0</td>\n",
-       "      <td>0.031284</td>\n",
-       "      <td>0.020439</td>\n",
-       "      <td>0.012272</td>\n",
-       "      <td>0.619572</td>\n",
-       "      <td>0.347717</td>\n",
-       "      <td>0.081861</td>\n",
-       "      <td>0.108220</td>\n",
-       "      <td>0.034459</td>\n",
-       "      <td>0.033878</td>\n",
+       "      <td>Cooperator Hunter</td>\n",
+       "      <td>3.347239</td>\n",
+       "      <td>0.152237</td>\n",
+       "      <td>96.0</td>\n",
+       "      <td>0.14350</td>\n",
+       "      <td>0.098972</td>\n",
+       "      <td>0.053265</td>\n",
+       "      <td>0.550556</td>\n",
+       "      <td>0.297207</td>\n",
+       "      <td>0.157721</td>\n",
+       "      <td>0.152564</td>\n",
+       "      <td>0.152024</td>\n",
+       "      <td>0.150916</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>1</td>\n",
-       "      <td>Eventual Cycle Hunter</td>\n",
-       "      <td>3.503627</td>\n",
-       "      <td>0.032001</td>\n",
-       "      <td>172.0</td>\n",
-       "      <td>0.034803</td>\n",
-       "      <td>0.020276</td>\n",
-       "      <td>0.011725</td>\n",
-       "      <td>0.619246</td>\n",
-       "      <td>0.348754</td>\n",
-       "      <td>0.081913</td>\n",
-       "      <td>0.107061</td>\n",
-       "      <td>0.032011</td>\n",
-       "      <td>0.034037</td>\n",
+       "      <td>$e$</td>\n",
+       "      <td>3.307425</td>\n",
+       "      <td>0.174586</td>\n",
+       "      <td>94.0</td>\n",
+       "      <td>0.15025</td>\n",
+       "      <td>0.116172</td>\n",
+       "      <td>0.058414</td>\n",
+       "      <td>0.533892</td>\n",
+       "      <td>0.291522</td>\n",
+       "      <td>0.225727</td>\n",
+       "      <td>0.210793</td>\n",
+       "      <td>0.161021</td>\n",
+       "      <td>0.154196</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>2</td>\n",
-       "      <td>Alternator Hunter</td>\n",
-       "      <td>3.478066</td>\n",
-       "      <td>0.047779</td>\n",
-       "      <td>167.0</td>\n",
-       "      <td>0.029915</td>\n",
-       "      <td>0.026793</td>\n",
-       "      <td>0.020986</td>\n",
-       "      <td>0.611581</td>\n",
-       "      <td>0.340639</td>\n",
-       "      <td>0.207054</td>\n",
-       "      <td>0.332443</td>\n",
-       "      <td>0.036153</td>\n",
-       "      <td>0.038292</td>\n",
+       "      <td>Hesitant QLearner</td>\n",
+       "      <td>3.270746</td>\n",
+       "      <td>0.186011</td>\n",
+       "      <td>93.0</td>\n",
+       "      <td>0.18450</td>\n",
+       "      <td>0.119065</td>\n",
+       "      <td>0.066946</td>\n",
+       "      <td>0.523808</td>\n",
+       "      <td>0.290181</td>\n",
+       "      <td>0.184686</td>\n",
+       "      <td>0.195297</td>\n",
+       "      <td>0.184778</td>\n",
+       "      <td>0.184233</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>3</td>\n",
-       "      <td>Worse and Worse</td>\n",
-       "      <td>3.475993</td>\n",
-       "      <td>0.040349</td>\n",
-       "      <td>172.0</td>\n",
-       "      <td>0.033239</td>\n",
-       "      <td>0.026018</td>\n",
-       "      <td>0.014332</td>\n",
-       "      <td>0.610532</td>\n",
-       "      <td>0.349119</td>\n",
-       "      <td>0.067050</td>\n",
-       "      <td>0.133902</td>\n",
-       "      <td>0.041876</td>\n",
-       "      <td>0.040933</td>\n",
+       "      <td>Opposite Grudger</td>\n",
+       "      <td>3.269142</td>\n",
+       "      <td>0.170526</td>\n",
+       "      <td>94.0</td>\n",
+       "      <td>0.85475</td>\n",
+       "      <td>0.100909</td>\n",
+       "      <td>0.069618</td>\n",
+       "      <td>0.533244</td>\n",
+       "      <td>0.296229</td>\n",
+       "      <td>0.148978</td>\n",
+       "      <td>0.340554</td>\n",
+       "      <td>0.151465</td>\n",
+       "      <td>0.160541</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>4</td>\n",
-       "      <td>Grumpy: Nice, 10, -10</td>\n",
-       "      <td>3.463903</td>\n",
-       "      <td>0.065585</td>\n",
-       "      <td>163.0</td>\n",
-       "      <td>0.032359</td>\n",
-       "      <td>0.026259</td>\n",
-       "      <td>0.039326</td>\n",
-       "      <td>0.613458</td>\n",
-       "      <td>0.320957</td>\n",
-       "      <td>0.313471</td>\n",
-       "      <td>0.505880</td>\n",
-       "      <td>0.035639</td>\n",
-       "      <td>0.049986</td>\n",
+       "      <td>Risky QLearner</td>\n",
+       "      <td>3.268843</td>\n",
+       "      <td>0.187037</td>\n",
+       "      <td>93.0</td>\n",
+       "      <td>0.19350</td>\n",
+       "      <td>0.119571</td>\n",
+       "      <td>0.067466</td>\n",
+       "      <td>0.523174</td>\n",
+       "      <td>0.289789</td>\n",
+       "      <td>0.184768</td>\n",
+       "      <td>0.194112</td>\n",
+       "      <td>0.185247</td>\n",
+       "      <td>0.186620</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   Rank                   Name  Median_score  Cooperation_rating   Wins  \\\n",
-       "0     0             Cooperator      3.507081            0.032711  172.0   \n",
-       "1     1  Eventual Cycle Hunter      3.503627            0.032001  172.0   \n",
-       "2     2      Alternator Hunter      3.478066            0.047779  167.0   \n",
-       "3     3        Worse and Worse      3.475993            0.040349  172.0   \n",
-       "4     4  Grumpy: Nice, 10, -10      3.463903            0.065585  163.0   \n",
+       "   Rank               Name  Median_score  Cooperation_rating  Wins  \\\n",
+       "0     0  Cooperator Hunter      3.347239            0.152237  96.0   \n",
+       "1     1                $e$      3.307425            0.174586  94.0   \n",
+       "2     2  Hesitant QLearner      3.270746            0.186011  93.0   \n",
+       "3     3   Opposite Grudger      3.269142            0.170526  94.0   \n",
+       "4     4     Risky QLearner      3.268843            0.187037  93.0   \n",
        "\n",
        "   Initial_C_rate   CC_rate   CD_rate   DC_rate   DD_rate  CC_to_C_rate  \\\n",
-       "0        0.031284  0.020439  0.012272  0.619572  0.347717      0.081861   \n",
-       "1        0.034803  0.020276  0.011725  0.619246  0.348754      0.081913   \n",
-       "2        0.029915  0.026793  0.020986  0.611581  0.340639      0.207054   \n",
-       "3        0.033239  0.026018  0.014332  0.610532  0.349119      0.067050   \n",
-       "4        0.032359  0.026259  0.039326  0.613458  0.320957      0.313471   \n",
+       "0         0.14350  0.098972  0.053265  0.550556  0.297207      0.157721   \n",
+       "1         0.15025  0.116172  0.058414  0.533892  0.291522      0.225727   \n",
+       "2         0.18450  0.119065  0.066946  0.523808  0.290181      0.184686   \n",
+       "3         0.85475  0.100909  0.069618  0.533244  0.296229      0.148978   \n",
+       "4         0.19350  0.119571  0.067466  0.523174  0.289789      0.184768   \n",
        "\n",
        "   CD_to_C_rate  DC_to_C_rate  DD_to_C_rate  \n",
-       "0      0.108220      0.034459      0.033878  \n",
-       "1      0.107061      0.032011      0.034037  \n",
-       "2      0.332443      0.036153      0.038292  \n",
-       "3      0.133902      0.041876      0.040933  \n",
-       "4      0.505880      0.035639      0.049986  "
+       "0      0.152564      0.152024      0.150916  \n",
+       "1      0.210793      0.161021      0.154196  \n",
+       "2      0.195297      0.184778      0.184233  \n",
+       "3      0.340554      0.151465      0.160541  \n",
+       "4      0.194112      0.185247      0.186620  "
       ]
      },
-     "execution_count": 19,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# the head of a frame\n",
-    "frame = pd.read_csv('../data/noise-data/19350.csv')\n",
+    "frame = pd.read_csv('../data/raw_data/noise-data/0.csv')\n",
     "frame.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CPU times: user 928 ms, sys: 180 ms, total: 1.11 s\n",
-      "Wall time: 1.14 s\n"
+     "ename": "NameError",
+     "evalue": "name 'parameters_data_frame' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<timed exec>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'parameters_data_frame' is not defined"
      ]
     }
    ],
    "source": [
-    "%time parameters_df = read_in.parameters_data_frame(directory)"
+    "%time parameters_df = parameters_data_frame(directory)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>index</th>\n",
-       "      <th>noise</th>\n",
-       "      <th>probend</th>\n",
-       "      <th>repetitions</th>\n",
-       "      <th>seed</th>\n",
-       "      <th>size</th>\n",
-       "      <th>turns</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0</td>\n",
-       "      <td>0.849486</td>\n",
-       "      <td>0.895039</td>\n",
-       "      <td>40.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>101.0</td>\n",
-       "      <td>134.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>62</td>\n",
-       "      <td>0.849486</td>\n",
-       "      <td>0.895039</td>\n",
-       "      <td>40.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>101.0</td>\n",
-       "      <td>134.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>93</td>\n",
-       "      <td>0.849486</td>\n",
-       "      <td>0.895039</td>\n",
-       "      <td>40.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>101.0</td>\n",
-       "      <td>134.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>124</td>\n",
-       "      <td>0.849486</td>\n",
-       "      <td>0.895039</td>\n",
-       "      <td>40.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>101.0</td>\n",
-       "      <td>134.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>124</td>\n",
-       "      <td>0.849486</td>\n",
-       "      <td>0.895039</td>\n",
-       "      <td>40.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>101.0</td>\n",
-       "      <td>134.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   index     noise   probend  repetitions  seed   size  turns\n",
-       "0      0  0.849486  0.895039         40.0   0.0  101.0  134.0\n",
-       "1     62  0.849486  0.895039         40.0   0.0  101.0  134.0\n",
-       "2     93  0.849486  0.895039         40.0   0.0  101.0  134.0\n",
-       "3    124  0.849486  0.895039         40.0   0.0  101.0  134.0\n",
-       "4    124  0.849486  0.895039         40.0   0.0  101.0  134.0"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'parameters_df' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-11-b16ecc093c29>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mparameters_df\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mhead\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m5\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'parameters_df' is not defined"
+     ]
     }
    ],
    "source": [
@@ -330,20 +306,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 2.8 s, sys: 8 ms, total: 2.81 s\n",
-      "Wall time: 2.81 s\n"
+      "CPU times: user 3.76 s, sys: 3.94 ms, total: 3.77 s\n",
+      "Wall time: 3.77 s\n"
      ]
     }
    ],
    "source": [
-    "%time strategies_df = read_in.strategies_properties()"
+    "%time df = strategies_properties()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "adaptive = df[df[\"Name\"] == \"Adaptive\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Adaptive'"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "adaptive.Name.all()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "inf"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "adaptive.Memory_depth.values[0]"
    ]
   },
   {
